fix break-point when wrap

--- a/client/src/styles/product.css
+++ b/client/src/styles/product.css
@@ -130,7 +130,7 @@
   margin-top: 0;
 }
 
-@media only screen and (max-width: 1880px) {
+@media only screen and (max-width: 1755px) {
   .product_element:nth-child(13),
   .product_element:nth-child(14),
   .product_element:nth-child(15) {
@@ -141,13 +141,13 @@
   }
 }
 
-@media only screen and (max-width: 1491px) {
+@media only screen and (max-width: 1396px) {
   .product_element:nth-child(13),
   .product_element:nth-child(14) {
     margin-bottom: 8.2em;
   }
-  .product_element:nth-child(16),
-  .product_element:nth-child(15) {
+  .product_element:nth-child(15),
+  .product_element:nth-child(16) {
     margin-bottom: 0;
   }
   .product_row {
@@ -155,7 +155,7 @@
   }  
 }
 
-@media only screen and (max-width: 1102px) {
+@media only screen and (max-width: 1037px) {
   .product_element:nth-child(13),
   .product_element:nth-child(14),
   .product_element:nth-child(15) {
